# whisper-cpp-pybind

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  pyproject.toml  setup.py
.github/workflows/: build_and_publish.yml
examples/: .gitignore  high_level_example.py  low_level_example.py
whisper_cpp/: __init__.py  utils.py  whisper.py  whisper_callback.py  whisper_cpp.py
