[tool.poetry]
name = "whisper_cpp_python"
version = "0.1.0"
description = "Python bindings for the whisper.cpp library"
authors = ["sphantix <sphantix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
