[tool.poetry]
name = "whisper-cpp-pybind"
version = "0.1.3"
description = "Python bindings for the whisper.cpp library"
authors = ["sphantix <sphantix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
scikit-build = "0.17.6"

[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "ninja",
]
build-backend = "setuptools.build_meta"
